--- a/index.html
+++ b/index.html
@@ -104,33 +104,7 @@
 <div id="app">
 
 </div>
-<script id="demoCode" type="application/gcode">G0 Y10 Z-5
-G1 Z-10
-G1 Y20
-G02 X10 Y30 R10
-G1 X30
-G2 X40 Y20 R10
-G1 Y10
-G2 X30 Y0 R10
-G1 X10
-G2 X0 Y10 Z-15 R10 (yeah spiral !)
-G3 X-10 Y20 R-10 (yeah, long arc !)
-G3 X0 Y10 I10 (center)
-G91 G1 X10 Z10
-G3 Y10 R5 Z3 (circle in incremental)
-Y10 R5 Z3 (again, testing modal state)
-G20 G0 X1 (one inch to the right)
-G3 X-1 R1 (radius in inches)
-G3 X1 Z0.3 I0.5 J0.5 (I,J in inches)
-G21 (back to mm)
-G80 X10 (do nothing)
-G90
-G0 X30 Y30 Z30
-G18 (X-Z plane)
-G3 Z40 I0 K5
-G19 (Y-Z plane)
-G3 Z50 J0 K5
-G17 (back to X-Y plane)
+<script id="demoCode" type="application/gcode">
 </script>
 <script>
     require(['Ember', 'cnc/ui/graphicView', 'cnc/cam/cam', 'cnc/util', 'cnc/ui/gcodeEditor', 'cnc/gcode/gcodeSimulation', 'templates'],
@@ -241,11 +215,6 @@ G17 (back to X-Y plane)
                 });
             });
 </script>
-<a href="https://github.com/nraynaud/webgcode/"><img
-        style="position: absolute; top: 0; right: 0; border: 0;"
-        src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67"
-        alt="Fork me on GitHub"
-        data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
 </body>
 </html>
 
